--- a/package.json
+++ b/package.json
@@ -10,18 +10,26 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^3.0.9",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/slider": "^3.0.3",
+    "@react-native-picker/picker": "^1.9.11",
+    "@react-navigation/material-top-tabs": "^5.3.10",
     "@react-navigation/native": "^5.8.9",
     "@react-navigation/stack": "^5.12.6",
     "@types/react-navigation": "^3.4.0",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-geolocation-service": "^5.2.0",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.14.0",
     "react-native-sqlite-storage": "^5.0.0",
-    "react-navigation": "^4.4.3"
+    "react-native-tab-view": "^2.15.2",
+    "react-navigation": "^4.4.3",
+    "react-time-picker": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
