--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@types/react-navigation": "^3.4.0",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-fs": "^2.16.6",
     "react-native-geolocation-service": "^5.2.0",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-google-drive-api-wrapper": "^1.4.0",
+    "react-native-google-signin": "^2.1.1",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.9",
@@ -29,7 +32,8 @@
     "react-native-sqlite-storage": "^5.0.0",
     "react-native-tab-view": "^2.15.2",
     "react-navigation": "^4.4.3",
-    "react-time-picker": "^4.1.2"
+    "react-time-picker": "^4.1.2",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
